# RobotSimulation

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  readme.md
.github/workflows/: build_and_test.yml
include/: Datatypes.h  InfDetector.h  InputParser.h  Robot.h  RobotSimulator.h  SimulationRunner.h  StringUtilities.h
src/: InfDetector.cpp  InputParser.cpp  Robot.cpp  RobotSimulator.cpp  SimulationRunner.cpp  StringUtilities.cpp  main.cpp
test_files/: sheet_example.txt
tests/: CMakeLists.txt  InfDetectorTest.cpp  InputParserTest.cpp  RobotSimulatorTest.cpp  RobotTest.cpp  SimulationRunnerTest.cpp  StringUtilitiesTest.cpp
